Adjust title width to avoid overlaps cancel box

--- a/src/assets/scss/_analyse.scss
+++ b/src/assets/scss/_analyse.scss
@@ -803,7 +803,9 @@
 		border: 1px solid transparent;
 
 
-		&-title {}
+		&-title {
+			width: calc(100% - 55px);
+		}
 
 		&-content {
 			overflow: auto;
